fix button alignment for compare mode

--- a/web/scss/features/embed.scss
+++ b/web/scss/features/embed.scss
@@ -155,7 +155,7 @@
   .comparison-mobile-select-toggle {
     transform-origin: bottom left;
     transform: scale(0.75);
-    bottom: 60px;
+    bottom: 56px;
   }
 
   .ab-swipe-dragger {
